# HFEsim-Scheduler

./: .pre-commit-config.yaml  pyproject.toml
GUI/: app.py  setup.py  template.py
examples/: read.py
models/: __init__.py  schedule.py
models/keyword/: __init__.py  _abstract.py  arbitrary_word.py  arithmetic.py  comment.py
models/keyword/group/: gconinje.py  gconprod.py  gingas.py  gruptree.py  wlist.py
models/keyword/well/: __init__.py  wecon.py  wefac.py  welldraw.py  welopen.py  welspecs.py
models/keyword/well/constructions/: __init__.py  compdatmd.py  welltrack.py  wsegvalv.py
models/keyword/well/frac/: fracture_specs.py  fracture_stage.py
models/keyword/well/inj/: __init__.py  wconinj.py  wconinjh.py
models/keyword/well/prod/: wconhist.py  wconprod.py
models/scheduler/: __init__.py  events.py  schedule.py  time_step.py
models/scheduler/exceptions/: sheet.py
models/scheduler/keyword/: __init__.py  _abstract.py  arbitrary_word.py  arithmetic.py  comment.py
schedulercore/: __init__.py
schedulercore/models/: __init__.py
schedulercore/models/scheduler/: __init__.py  events.py  schedule.py  time_step.py
schedulercore/service/: __init__.py
schedulercore/service/deserializer/: __init__.py  to_sch.py
schedulercore/service/serializer/: from_exel.py
schedulercore/service/time_worker/: calculations.py  convertors.py  exception.py  types.py
service/deserializer/: to_sch.py
service/parser/from_exel/: parser.py
service/serializer/: __init__.py  from_exel.py
service/time_worker/: __init__.py  calculations.py  convertors.py  exception.py
(+52 files in other folders)
